--- a/src/html/partials/partials__cards/form__fill.html
+++ b/src/html/partials/partials__cards/form__fill.html
@@ -1,31 +1,31 @@
 <fieldset class="form__fill">
-  <legend class="form--title">Rellena</legend>
-  <label for="fullname" class="form--label">Nombre Completo</label>
+  <legend class="form__title">Rellena</legend>
+  <label for="fullname" class="form__label">Nombre Completo</label>
   <input
     type="text"
     id="fullname"
     name="fullname"
     placeholder="Ej:Sally Jill"
   />
-  <label for="job" class="form--label">Puesto</label>
+  <label for="job" class="form__label">Puesto</label>
   <input type="text" id="job" name="job" placeholder="Ej: Front-end unicorn" />
-  <label for="profilepicture" class="form--label">Imagen de perfil</label>
-  <label for="email" class="form--label">Email</label>
+  <label for="profilepicture" class="form__label">Imagen de perfil</label>
+  <label for="email" class="form__label">Email</label>
   <input
     type="email"
     id="email"
     name="email"
     placeholder="Ej: sally-hill@gmail.com"
   />
-  <label for="phone" class="form--label">Teléfono</label>
+  <label for="phone" class="form__label">Teléfono</label>
   <input type="tel" id="phone" name="phone" placeholder="Ej: 555-55-55-55" />
-  <label for="linkedin" class="form--label">Linkedin</label>
+  <label for="linkedin" class="form__label">Linkedin</label>
   <input
     type="text"
     id="linkedin"
     name="linkedin"
     placeholder="Ej: linkedin.com/in/sally.hill"
   />
-  <label for="github" class="form--label">Github</label>
+  <label for="github" class="form__label">Github</label>
   <input type="text" id="github" name="github" placeholder="Ej: @sally-hill" />
 </fieldset>
