--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -1,1 +1,9 @@
 <include src="./form.html"></include>
+<div class="card__container">
+    <div class="card__reset">
+        <i class="far fa-trash-alt"></i>
+        <a class="card__reset--button" href="">Reset</a>
+
+    </div>
+
+</div>
