--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,13 +1,15 @@
 // fonts
-$font-index-title: 'Merriweather Sans', sans-serif;
-$font-index-subtitle: 'Open Sans', sans-serif;
+$font-index-title: "Merriweather Sans", sans-serif;
+$font-index-subtitle: "Open Sans", sans-serif;
 
 //colors
 $background-index: #f5f5f5;
-$text-index-title:#e17334;
+$text-index-title: #e17334;
 $text-index-subtitle: #114e4e;
 $background-button: #438792;
 $text-button: #ffffff;
 $background-footer: #d8d8d8;
 $copy-text: #6b6b6b;
 $text-icon: #54585a;
+$background-card1: #bfcdd0;
+$background-card2: #dde9ed;
