update form structure

--- a/src/html/partials/partials__cards/form__fill.html
+++ b/src/html/partials/partials__cards/form__fill.html
@@ -1,5 +1,7 @@
 <fieldset class="form__fill">
-  <legend class="form__title">Rellena</legend>
+  <legend class="form__title">
+    <i class="far fa-keyboard"></i>Rellena<i class="fas fa-chevron-down"></i>
+  </legend>
   <label for="fullname" class="form__label">Nombre Completo</label>
   <input
     type="text"
