--- a/src/html/partials/partials__cards/form.html
+++ b/src/html/partials/partials__cards/form.html
@@ -1,3 +1,4 @@
 <form action="#" method="get" class="form">
+  <include src="./form__design.html"></include>
   <include src="./form__fill.html"></include>
 </form>
