--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 
 @import "core/variables";
 @import "core/reset";
+@import "core/mixins";
 @import "pages/index";
 // @import 'components/code';
 // @import 'components/links';
