update mainpage css

--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -1,7 +1,7 @@
 <include src="./form.html"></include>
-<div class="card__container">
+<div class="container">
     <div class="card__reset">
-        <i class="far fa-trash-alt"></i>
+        <i class="far fa-trash-alt card__reset--icon"></i>
         <a class="card__reset--button" href="">Reset</a>
 
     </div>
