--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,9 @@
-
 @import "core/variables";
 @import "core/reset";
 @import "pages/index";
-// @import 'components/code';
-// @import 'components/links';
+@import 'components/code';
+@import 'components/links';
 // @import 'layout/page';
-// @import 'layout/header';
-@import 'layout/footer';
-
+@import 'layout/header';
+@import "layout/mainpage";
+@import "layout/footer";
