--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,6 @@
 // @import 'components/code';
 // @import 'components/links';
 // @import 'layout/page';
-// @import 'layout/header';
+@import 'layout/header';
 @import 'layout/footer';
 
