--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -1,9 +1,26 @@
-<include src="./form.html"></include>
-<div class="container">
-    <div class="card__reset">
-        <i class="far fa-trash-alt card__reset--icon"></i>
-        <a class="card__reset--button" href="">Reset</a>
+<section class="container">
+    <div class="card__preview">
+        <button class="card__preview--reset"><i class="far fa-trash-alt card__reset--icon"></i>Reset
+        </button>
+
+        <div class="card__preview--default">
+            <div class="card__preview--text">
+                <h3 class="h3--card">Nombre Apellido</h3>
+                <h4 class="h4--card">Front-End Developer</h4>
+            </div>
+            <div class="card__image--default"></div>
+            <div class="card__links--section">
+                <a class="social" title="Phone">
+                </a>
+                <a class="social" title="Email">
+                </a>
+                <a class="social" title="Linkedin">
+                </a>
+                <a class="social" title="GitHub">
+                </a>
+            </div>
+        </div>
 
     </div>
-
-</div>
+</section>
+<include src="./form.html"></include>
