--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -4,15 +4,17 @@
   justify-items: center;
   width: 100%;
   height: 457px;
-  background-color: $background-card1;
-  background-color: linear-gradient(to bottom, #bfcdd0, #dde9ed);
-
-  &__reset {
-    color: $text-icon;
-    font-family: $font-index-subtitle;
-  }
-  &__button {
-    border: solid 1px white;
-    border-radius: 15px;
-  }
+  background: linear-gradient(to bottom, #bfcdd0, #dde9ed);
 }
+.card__preview {
+  color: $text-icon;
+  font-family: $font-index-subtitle;
+  width: 75px;
+  height: 30px;
+  background-color: red;
+}
+//   &__button {
+//     border: solid 1px white;
+//     border-radius: 15px;
+//   }
+// }
