add form styles

--- a/src/html/partials/partials__cards/form__share.html
+++ b/src/html/partials/partials__cards/form__share.html
@@ -1,6 +1,8 @@
 <fieldset class="form__share">
   <legend class="form__title">
-    <i class="fas fa-share-alt"></i>Comparte<i class="fas fa-chevron-down"></i>
+    <i class="form__title--icon fas fa-share-alt"></i>
+    <h2 class="form__title--text">Comparte</h2>
+    <i class="form__title--chevron fas fa-chevron-down"></i>
   </legend>
   <button class="form__submit" type="submit">
     <i class="fas fa-share-alt"></i>crear tarjeta
