--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,3 @@
-
 @import "core/variables";
 @import "core/reset";
 @import "pages/index";
@@ -6,5 +5,5 @@
 // @import 'components/links';
 // @import 'layout/page';
 // @import 'layout/header';
-@import 'layout/footer';
-
+@import "layout/form";
+@import "layout/footer";
