--- a/src/html/partials/partials__cards/form__fill.html
+++ b/src/html/partials/partials__cards/form__fill.html
@@ -1,6 +1,8 @@
 <fieldset class="form__fill">
   <legend class="form__title">
-    <i class="far fa-keyboard"></i>Rellena<i class="fas fa-chevron-down"></i>
+    <i class="form__title--icon far fa-keyboard"></i>
+    <h2 class="form__title--text">Rellena</h2>
+    <i class="form__title--chevron fas fa-chevron-down"></i>
   </legend>
   <label for="fullname" class="form__label">Nombre Completo</label>
   <input
@@ -8,9 +10,18 @@
     id="fullname"
     name="fullname"
     placeholder="Ej:Sally Jill"
+    pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
+    required
   />
   <label for="job" class="form__label">Puesto</label>
-  <input type="text" id="job" name="job" placeholder="Ej: Front-end unicorn" />
+  <input
+    type="text"
+    id="job"
+    name="job"
+    placeholder="Ej: Front-end unicorn"
+    pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
+    required
+  />
   <label for="profilepicture" class="form__label">Imagen de perfil</label>
   <label for="email" class="form__label">Email</label>
   <input
@@ -18,16 +29,30 @@
     id="email"
     name="email"
     placeholder="Ej: sally-hill@gmail.com"
+    required
   />
   <label for="phone" class="form__label">Teléfono</label>
-  <input type="tel" id="phone" name="phone" placeholder="Ej: 555-55-55-55" />
+  <input
+    type="tel"
+    id="phone"
+    name="phone"
+    placeholder="Ej: 555-55-55-55"
+    required
+  />
   <label for="linkedin" class="form__label">Linkedin</label>
   <input
     type="text"
     id="linkedin"
     name="linkedin"
     placeholder="Ej: linkedin.com/in/sally.hill"
+    required
   />
   <label for="github" class="form__label">Github</label>
-  <input type="text" id="github" name="github" placeholder="Ej: @sally-hill" />
+  <input
+    type="text"
+    id="github"
+    name="github"
+    placeholder="Ej: @sally-hill"
+    required
+  />
 </fieldset>
