--- a/src/html/partials/partials__cards/form__design.html
+++ b/src/html/partials/partials__cards/form__design.html
@@ -1,20 +1,18 @@
-<fieldset class="form__design">
-    <legend class="form__title">Diseña</legend>
-    <label for="chooseColor1" class="form__label">
-        <input class="form__input" type="radio" name="chooseColor" id="chooseColor1" value="color1">
-        Color 1
+<fieldset class="form__design">  
+    <legend class="form__title form__title--design">
+        <ul><i class="form__title--icon icon-light far fa-object-ungroup "></i></ul>
+        Diseña
+        <ul>
+            <i class="form__title--icon icon-medium far fa-chevron-down"></i>
+            <i class="form__title--icon icon-medium far fa-chevron-up"></i>
+        </ul>
+    </legend>
+    <div class="form__design--wrapper">
+        <label for="chooseColor" class="form__label form__label--color">Colores</label>
         <div class="form__input--wrapper">
-            <div class="form__input--color color1a"></div>
-            <div class="form__input--color color1b"></div>
-            <div class="form__input--color color1c"></div>
+        <include src="./design/palette.html" num="1"></include>
+        <include src="./design/palette.html" num="2"></include>
+        <include src="./design/palette.html" num="3"></include>
         </div>
-    </label>
-    <label for="chooseColor2" class="form__label">
-        <input class="form__input" type="radio" name="chooseColor" id="chooseColor2" value="color2">
-        Color 2
-    </label>
-    <label for="chooseColor3" class="form__label">
-        <input class="form__input" type="radio" name="chooseColor" id="chooseColor3" value="color3">
-        Color 3
-    </label>
+    </div>
 </fieldset>
