--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,9 +3,11 @@
 @import "core/reset";
 @import "core/mixins";
 @import "pages/index";
+@import 'components/palette';
 // @import 'components/code';
 // @import 'components/links';
 // @import 'layout/page';
+@import 'layout/form';
 // @import 'layout/header';
 @import 'layout/footer';
 
