--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -1,5 +1,10 @@
-
-
-
-
-    
+@mixin tablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+@mixin desktop {
+  @media (min-width: 1200px) {
+    @content;
+  }
+}
