--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -7,12 +7,26 @@
   flex-direction: column;
   justify-content: center;
 }
+.tarjeta {
+  width: 250px;
+  height: 63px;
+  padding-bottom: 30px;
+  @media (min-width: 768px) {
+    width: 419px;
+    height: 105px;
+  }
+}
 .main {
   &__title {
-    font-family: "Merriweather Sans", sans-serif;
+    font-family: $font-index-title;
     font-size: 20px;
     color: $text-index-title;
     margin-bottom: 20px;
+    font-weight: 900;
+    @media (min-width: 768px) {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
   }
   &__subtitle {
     font-family: $font-index-subtitle;
@@ -20,6 +34,11 @@
     color: $text-index-subtitle;
     padding: 0 28px 0 28px;
     align-self: center;
+    margin-bottom: 17px;
+
+    @media (min-width: 768px) {
+      font-size: 16px;
+    }
   }
 }
 .icons {
@@ -31,39 +50,62 @@
   border-radius: 4px;
   margin: 17.8px 0 0.2px;
   padding: 15px 5px 5px 5px;
- 
+  @media (min-width: 768px) {
+    width: 325px;
+    height: 86px;
+  }
+
   &__content {
     width: 60px;
     height: 48.8px;
     margin: 10px 10px 10px 10px;
     align-self: center;
+    
+    @media (min-width: 768px) {
+      width: 75px;
+      height: 61px;
+      font-size: 28px;
+    }
   }
   &__content1 {
     width: 60px;
     height: 48.8px;
     align-self: center;
-   }
+    @media (min-width: 768px) {
+      width: 75px;
+      height: 61px;
+      font-size: 28px;
+    }
+  }
 
   &__content-design {
-    color: $text-index-title;
+    color: black;
     font-family: $font-index-subtitle;
     font-size: 13px;
     align-self: center;
+    @media (min-width: 768px) {
+      font-size: 16px;
+    }
   }
   &__content-fild {
-    color: $text-index-title;
+    color: black;
     font-family: $font-index-subtitle;
     font-size: 13px;
     align-self: center;
+    @media (min-width: 768px) {
+      font-size: 16px;
+    }
   }
   &__content1-share {
-    color: $text-index-title;
+    color: black;
     font-family: $font-index-subtitle;
     font-size: 13px;
     align-self: center;
+    @media (min-width: 768px) {
+      font-size: 16px;
+    }
   }
 }
-
 
 .far {
   color: $text-index-title;
@@ -71,6 +113,7 @@
   height: 26px;
   font-size: 22.4px;
   text-align: center;
+  padding-left: 5px;
 }
 .fas {
   color: $text-index-title;
@@ -78,17 +121,23 @@
   height: 26px;
   font-size: 22.4px;
   text-align: center;
+  padding-left: 5px;
 }
 
 .btn {
   text-transform: uppercase;
-  width: 129px;
+  width: 160px;
   height: 42px;
-  margin: 38px 75px 0 65px;
-  padding: 10px 20px;
+  margin: 90px 75px 0 65px;
   border-radius: 21px;
   background-color: $background-button;
   color: $text-button;
   font-size: 16px;
   font-family: $font-index-subtitle;
+  
+  @media (min-width:768px) {
+    margin-top: 150px;
+    
+  }
+  
 }
