--- a/src/html/partials/head.html
+++ b/src/html/partials/head.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="icon" href="#" />
+    <link rel="icon" href="./assets/images/favicon.svg" />
     <title>@@title</title>
   </head>
 </html>
