--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -1,6 +1,6 @@
 <section class="container">
     <div class="card__preview">
-        <button class="card__preview--reset">Reset<i class="far fa-trash-alt card__reset--icon"></i>
+        <button class="card__preview--reset" type="reset">Reset<i class="far fa-trash-alt card__reset--icon"></i>
         </button>
 
         <div class="card__preview--default">
