--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -1,7 +1,7 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  justify-items: center;
+  // display: flex;
+  // flex-direction: column;
+  // justify-items: center;
   width: 100%;
   height: 457px;
   background: linear-gradient(to bottom, #bfcdd0, #dde9ed);
@@ -16,6 +16,7 @@
   border: solid 1px white;
   border-radius: 15px;
   background-color: transparent;
+  margin: 38px 200px 0 45px;
 }
 .card__reset--icon {
   color: #54585a;
@@ -24,8 +25,9 @@
 .card__preview--default {
   width: 240px;
   height: 329px;
-  margin: 88px 35px 40px 45px;
+  margin: 20px 35px 40px 45px;
   background-color: #fff;
+  box-shadow: 0 1px 10px 0 var(--black-20), 0 1px 3px 0 rgba(0, 0, 0, 0.35);
 }
 //   color: $text-icon;
 //   font-family: $font-index-subtitle;
