--- a/src/html/partials/partials__cards/form__fill.html
+++ b/src/html/partials/partials__cards/form__fill.html
@@ -11,6 +11,7 @@
     name="fullname"
     placeholder="Ej:Sally Jill"
     pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
+    class="form__input"
     required
   />
   <label for="job" class="form__label">Puesto</label>
@@ -20,6 +21,7 @@
     name="job"
     placeholder="Ej: Front-end unicorn"
     pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
+    class="form__input"
     required
   />
   <label for="profilepicture" class="form__label">Imagen de perfil</label>
@@ -29,6 +31,7 @@
     id="email"
     name="email"
     placeholder="Ej: sally-hill@gmail.com"
+    class="form__input"
     required
   />
   <label for="phone" class="form__label">Teléfono</label>
@@ -37,6 +40,7 @@
     id="phone"
     name="phone"
     placeholder="Ej: 555-55-55-55"
+    class="form__input"
     required
   />
   <label for="linkedin" class="form__label">Linkedin</label>
@@ -45,6 +49,7 @@
     id="linkedin"
     name="linkedin"
     placeholder="Ej: linkedin.com/in/sally.hill"
+    class="form__input"
     required
   />
   <label for="github" class="form__label">Github</label>
@@ -53,6 +58,7 @@
     id="github"
     name="github"
     placeholder="Ej: @sally-hill"
+    class="form__input"
     required
   />
 </fieldset>
