--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,21 @@
-@import "core/variables";
+//Core
+
 @import "core/reset";
+@import "core/variables";
+@import "core/mixins";
+
+//Pages
+
 @import "pages/index";
+
+//Layout
+
+@import "layout/form";
+@import "layout/footer";
+
+// Componentes
+
 // @import 'components/code';
 // @import 'components/links';
 // @import 'layout/page';
 // @import 'layout/header';
-@import "layout/form";
-@import "layout/footer";
