--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -5,10 +5,12 @@
   width: 100%;
   height: 457px;
   background: linear-gradient(to bottom, #bfcdd0, #dde9ed);
+  outline: 1px solid red;
 }
 .card__preview {
   display: block;
   box-sizing: border-box;
+  outline: 1px solid red;
 }
 .card__preview--reset {
   width: 75px;
@@ -17,10 +19,12 @@
   border-radius: 15px;
   background-color: transparent;
   margin: 38px 200px 0 45px;
+  outline: 1px solid red;
 }
 .card__reset--icon {
   color: #54585a;
   align-items: left;
+  outline: 1px solid red;
 }
 .card__preview--default {
   width: 240px;
@@ -28,6 +32,7 @@
   margin: 20px 35px 40px 45px;
   background-color: #fff;
   box-shadow: 0 1px 10px 0 var(--black-20), 0 1px 3px 0 rgba(0, 0, 0, 0.35);
+  outline: 1px solid red;
 }
 //   color: $text-icon;
 //   font-family: $font-index-subtitle;
