link css mainpage&footer. Import font Montserrat to head.html. Create variable for font card title

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,7 @@
 // fonts
 $font-index-title: "Merriweather Sans", sans-serif;
 $font-index-subtitle: "Open Sans", sans-serif;
+$font-card-title: "Montserrat", sans-serif;
 
 //colors
 $background-index: #f5f5f5;
