--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,8 @@
 @import "pages/index";
 
 //Layout
-
+@import "layout/header";
+@import "layout/mainpage";
 @import "layout/form";
 @import "layout/footer";
 
