update card preview section

--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -4,19 +4,19 @@
         </button>
 
         <div class="card__preview--default">
-            <div class="card__preview--text">
+            <div class="preview--text">
                 <h3 class="h3--card">Nombre Apellido</h3>
                 <h4 class="h4--card">Front-End Developer</h4>
             </div>
             <div class="card__image--default"></div>
             <div class="card__links--section">
-                <a class="social" title="Phone">
+                <a href="#" class="social--links" title="Phone"><i class="fas fa-mobile-alt social--icon"></i>
                 </a>
-                <a class="social" title="Email">
+                <a href="#" class="social--links" title="Email"><i class="far fa-envelope social--icon"></i>
                 </a>
-                <a class="social" title="Linkedin">
+                <a href="#" class="social--links" title="Linkedin"><i class="fab fa-linkedin-in social--icon"></i>
                 </a>
-                <a class="social" title="GitHub">
+                <a href="#" class="social--links" title="GitHub"><i class="fab fa-github-alt social--icon"></i>
                 </a>
             </div>
         </div>
