update classes from mainpage.html & nest css on mainpage.scss

--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -1,22 +1,26 @@
 <section class="container">
     <div class="card__preview">
-        <button class="card__preview--reset" type="reset">Reset<i class="far fa-trash-alt card__reset--icon"></i>
+        <button class="preview__reset" type="reset">Reset<i class="far fa-trash-alt preview__reset--icon"></i>
         </button>
 
         <div class="card__preview--default">
-            <div class="preview--text">
-                <h3 class="h3--card">Nombre Apellido</h3>
-                <h4 class="h4--card">Front-End Developer</h4>
+            <div class="preview__text">
+                <h3 class="preview__text--name">Nombre Apellido</h3>
+                <h4 class="preview__text--role">Front-End Developer</h4>
             </div>
-            <div class="card__image--default"></div>
-            <div class="card__links--section">
-                <a href="#" class="social--links" title="Phone"><i class="fas fa-mobile-alt social--icon"></i>
+            <div class="preview__image"></div>
+            <div class="preview__links">
+                <a href="#" class="preview__links--social" title="Phone"><i
+                        class="fas fa-mobile-alt preview__links--icon"></i>
                 </a>
-                <a href="#" class="social--links" title="Email"><i class="far fa-envelope social--icon"></i>
+                <a href="#" class="preview__links--social" title="Email"><i
+                        class="far fa-envelope preview__links--icon"></i>
                 </a>
-                <a href="#" class="social--links" title="Linkedin"><i class="fab fa-linkedin-in social--icon"></i>
+                <a href="#" class="preview__links--social" title="Linkedin"><i
+                        class="fab fa-linkedin-in preview__links--icon"></i>
                 </a>
-                <a href="#" class="social--links" title="GitHub"><i class="fab fa-github-alt social--icon"></i>
+                <a href="#" class="preview__links--social" title="GitHub"><i
+                        class="fab fa-github-alt preview__links--icon"></i>
                 </a>
             </div>
         </div>
