update button reset

--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -1,6 +1,6 @@
 <section class="container">
     <div class="card__preview">
-        <button class="preview__reset" type="reset">Reset<i class="far fa-trash-alt preview__reset--icon"></i>
+        <button class="preview__reset" type="reset"><p class="preview__reset--text">Reset</p><i class="far fa-trash-alt preview__reset--icon"></i>
         </button>
 
         <div class="card__preview--default">
