change space 2 columns

--- a/src/html/partials/partials__cards/form__design.html
+++ b/src/html/partials/partials__cards/form__design.html
@@ -1,18 +1,20 @@
-<fieldset class="form__design">  
-    <legend class="form__title form__title--design">
-        <ul><i class="form__title--icon icon-light far fa-object-ungroup "></i></ul>
-        Diseña
-        <ul>
-            <i class="form__title--icon icon-medium far fa-chevron-down"></i>
-            <i class="form__title--icon icon-medium far fa-chevron-up"></i>
-        </ul>
-    </legend>
-    <div class="form__design--wrapper">
-        <label for="chooseColor" class="form__label form__label--color">Colores</label>
-        <div class="form__input--wrapper">
-        <include src="./design/palette.html" num="1"></include>
-        <include src="./design/palette.html" num="2"></include>
-        <include src="./design/palette.html" num="3"></include>
-        </div>
+<fieldset class="form__design">
+  <legend class="form__title form__title--design">
+    <ul>
+      <i class="form__title--icon icon-light far fa-object-ungroup"></i>
+    </ul>
+    Diseña
+    <ul>
+      <i class="form__title--icon icon-medium far fa-chevron-down"></i>
+      <i class="form__title--icon icon-medium far fa-chevron-up"></i>
+    </ul>
+  </legend>
+  <div class="form__design--wrapper">
+    <label for="chooseColor" class="form__label form__label--color">Colores</label>
+    <div class="form__input--wrapper">
+      <include src="./design/palette.html" num="1"></include>
+      <include src="./design/palette.html" num="2"></include>
+      <include src="./design/palette.html" num="3"></include>
     </div>
+  </div>
 </fieldset>
