--- a/src/html/partials/partials__cards/form__share.html
+++ b/src/html/partials/partials__cards/form__share.html
@@ -5,6 +5,6 @@
     <i class="form__title--chevron fas fa-chevron-down"></i>
   </legend>
   <button class="form__submit" type="submit">
-    <i class="fas fa-share-alt"></i>crear tarjeta
+    <i class="form__submit--icon far fa-address-card"></i>crear tarjeta
   </button>
 </fieldset>
