--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -70,7 +70,7 @@
       height: 32px;
       border-radius: 16px;
       border: solid 2px #a2deaf;
-      margin-left: 10px;
+      margin-right: 10px;
       // padding: 8px 7.5px 6px 7.5px;
     }
     &--icon {
