--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 
 @import "core/variables";
+@import "core/mixins";
 @import "core/reset";
 @import "pages/index";
 // @import 'components/code';
@@ -7,4 +8,5 @@
 // @import 'layout/page';
 @import 'layout/header';
 @import 'layout/footer';
+
 
