update form styles

--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -30,6 +30,7 @@
     &--icon {
       font-size: 18px;
       line-height: 24px;
+      color: $text-index-title;
     }
     &--chevron {
       font-size: 18px;
