--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -5,17 +5,16 @@
   padding-top: 30px;
   padding-bottom: 45px;
   border-top: 1px solid #b8b8b9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   @include tablet {
-    @media (min-width: 768px) {
-      display: flex;
-      justify-content: space-around;
-    }
+    justify-content: space-around;
+    flex-direction: row;
   }
 
   &__copy {
-    display: flex;
-    justify-content: center;
     font-size: 14px;
     opacity: 0.5;
     color: $copy-text;
@@ -28,12 +27,8 @@
     .img {
       width: 115px;
       height: 45px;
-      display: block;
-      margin-left: 90px;
-    }
-    
-    @include tablet {
-      @media (min-width: 768px) {
+
+      @include tablet {
         display: flex;
         justify-content: flex-end;
       }
