--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,4 +1,4 @@
-.container {
+.container1 {
   background-color: $background-index;
   width: 100%;
   height: 100vh;
@@ -10,13 +10,11 @@
 /*IMAGEN*/
 .tarjeta {
   width: 250px;
-  height: 63px;
+  /*height: 63px;*/
   padding-bottom: 30px;
   @include tablet {
-    @media (min-width: 768px) {
-      width: 419px;
-      height: 105px;
-    }
+    width: 419px;
+    height: 105px;
   }
 }
 /*TITULOS*/
@@ -28,10 +26,8 @@
     margin-bottom: 20px;
     font-weight: 900;
     @include tablet {
-      @media (min-width: 768px) {
-        font-size: 24px;
-        margin-bottom: 10px;
-      }
+      font-size: 24px;
+      margin-bottom: 10px;
     }
   }
   &__subtitle {
@@ -42,9 +38,7 @@
     align-self: center;
     margin-bottom: 17px;
     @include tablet {
-      @media (min-width: 768px) {
-        font-size: 16px;
-      }
+      font-size: 16px;
     }
   }
 }
@@ -59,10 +53,8 @@
   margin: 17.8px 0 0.2px;
   padding: 15px 5px 5px 5px;
   @include tablet {
-    @media (min-width: 768px) {
-      width: 325px;
-      height: 86px;
-    }
+    width: 325px;
+    height: 86px;
   }
 
   &__content {
@@ -71,11 +63,9 @@
     margin: 10px 10px 10px 10px;
     align-self: center;
     @include tablet {
-      @media (min-width: 768px) {
-        width: 75px;
-        height: 61px;
-        font-size: 28px;
-      }
+      width: 75px;
+      height: 61px;
+      font-size: 28px;
     }
   }
   &__content1 {
@@ -83,11 +73,9 @@
     height: 48.8px;
     align-self: center;
     @include tablet {
-      @media (min-width: 768px) {
-        width: 75px;
-        height: 61px;
-        font-size: 28px;
-      }
+      width: 75px;
+      height: 61px;
+      font-size: 28px;
     }
   }
 
@@ -97,9 +85,7 @@
     font-size: 13px;
     align-self: center;
     @include tablet {
-      @media (min-width: 768px) {
-        font-size: 16px;
-      }
+      font-size: 16px;
     }
   }
   &__content-fild {
@@ -108,9 +94,7 @@
     font-size: 13px;
     align-self: center;
     @include tablet {
-      @media (min-width: 768px) {
-        font-size: 16px;
-      }
+      font-size: 16px;
     }
   }
   &__content1-share {
@@ -119,9 +103,7 @@
     font-size: 13px;
     align-self: center;
     @include tablet {
-      @media (min-width: 768px) {
-        font-size: 16px;
-      }
+      font-size: 16px;
     }
   }
 }
@@ -134,6 +116,9 @@
   font-size: 22.4px;
   text-align: center;
   padding-left: 5px;
+  @include tablet {
+    font-size: 28px;
+  }
 }
 .keyboard {
   color: $text-index-title;
@@ -142,6 +127,10 @@
   font-size: 22.4px;
   text-align: center;
   padding-left: 5px;
+  @include tablet {
+    font-size: 28px;
+    padding-left: 10px;
+  }
 }
 
 .share {
@@ -151,6 +140,10 @@
   font-size: 22.4px;
   text-align: center;
   padding-left: 5px;
+  @include tablet {
+    font-size: 28px;
+    padding-left: 20px;
+  }
 }
 
 /*LINK*/
@@ -171,8 +164,6 @@
   align-items: center;
   justify-content: center;
   @include tablet {
-    @media (min-width: 768px) {
-      margin-top: 150px;
-    }
+    margin-top: 150px;
   }
 }
