--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -2,11 +2,9 @@
   width: 100%;
   height: 457px;
   background: linear-gradient(to bottom, #bfcdd0, #dde9ed);
-  outline: 1px solid red;
 }
 .card__preview {
   box-sizing: border-box;
-  outline: 1px solid red;
   .preview__reset {
     display: flex;
     flex-direction: row;
@@ -19,13 +17,12 @@
     border-radius: 15px;
     background-color: transparent;
     margin: 38px auto 0 45px;
-    outline: 1px solid red;
+
     &--icon {
       order: -1;
       // margin: 5px auto 5px 10px;
       color: #54585a;
       font-size: 12px;
-      outline: 1px solid red;
     }
   }
 }
@@ -36,7 +33,6 @@
   margin: 20px 35px 40px 45px;
   background-color: #fff;
   box-shadow: 0 1px 10px 0 var(--black-20), 0 1px 3px 0 rgba(0, 0, 0, 0.35);
-  outline: 1px solid red;
   .preview__text {
     margin-left: 20px;
     font-family: $font-card-title;
@@ -56,7 +52,6 @@
     width: 240px;
     height: 200px;
     background-image: url("https://www.fillmurray.com/240/200");
-    // background-size: cover;
     margin-top: 10px;
   }
   .preview__links {
@@ -64,19 +59,19 @@
     flex-direction: row;
     justify-content: flex-start;
     margin: 10px auto 12px 20px;
-    box-sizing: border-box;
     &--social {
       width: 32px;
       height: 32px;
       border-radius: 16px;
       border: solid 2px #a2deaf;
       margin-right: 10px;
-      // padding: 8px 7.5px 6px 7.5px;
     }
     &--icon {
       color: $text-index-subtitle;
       font-size: 18px;
-      // border: 7px 10px;
+      text-align: center;
+      margin-top: 6px;
+      margin-left: 6px;
     }
   }
 }
