add collapsable headers

--- a/src/html/partials/partials__cards/form__design.html
+++ b/src/html/partials/partials__cards/form__design.html
@@ -1,5 +1,5 @@
 <fieldset class="form__design">
-  <legend class="form__title form__title--design">
+  <legend class="form__title form__title--design js-design__title">
     <ul>
       <i class="form__title--icon icon-light far fa-object-ungroup"></i>
     </ul>
@@ -10,7 +10,9 @@
     </ul>
   </legend>
   <div class="form__design--wrapper">
-    <label for="chooseColor" class="form__label form__label--color">Colores</label>
+    <label for="chooseColor" class="form__label form__label--color"
+      >Colores</label
+    >
     <div class="form__input--wrapper">
       <include src="./design/palette.html" num="1"></include>
       <include src="./design/palette.html" num="2"></include>
