--- a/src/html/partials/partials__cards/form__share.html
+++ b/src/html/partials/partials__cards/form__share.html
@@ -1,5 +1,5 @@
-<fieldset class="form__share">
-  <legend class="form__title">
+<fieldset class="form__share collapsed">
+  <legend class="form__title js-share__title">
     <i class="form__title--icon fas fa-share-alt"></i>
     <h2 class="form__title--text">Comparte</h2>
     <i class="form__title--chevron fas fa-chevron-down"></i>
