add preview interaction

--- a/src/html/partials/partials__cards/form__fill.html
+++ b/src/html/partials/partials__cards/form__fill.html
@@ -12,7 +12,7 @@
       name="fullname"
       placeholder="Ej:Sally Jill"
       pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
-      class="form__input"
+      class="form__input js-name"
       required
     />
     <label for="job" class="form__label">Puesto</label>
@@ -22,7 +22,7 @@
       name="job"
       placeholder="Ej: Front-end unicorn"
       pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
-      class="form__input"
+      class="form__input js-job"
       required
     />
     <label for="profilepicture" class="form__label">Imagen de perfil</label>
@@ -32,7 +32,7 @@
       id="email"
       name="email"
       placeholder="Ej: sally-hill@gmail.com"
-      class="form__input"
+      class="form__input js-email"
       required
     />
     <label for="phone" class="form__label">Teléfono</label>
@@ -41,7 +41,7 @@
       id="phone"
       name="phone"
       placeholder="Ej: 555-55-55-55"
-      class="form__input"
+      class="form__input js-phone"
       required
     />
     <label for="linkedin" class="form__label">Linkedin</label>
@@ -50,7 +50,7 @@
       id="linkedin"
       name="linkedin"
       placeholder="Ej: linkedin.com/in/sally.hill"
-      class="form__input"
+      class="form__input js-linkedin"
       required
     />
     <label for="github" class="form__label">Github</label>
@@ -59,7 +59,7 @@
       id="github"
       name="github"
       placeholder="Ej: @sally-hill"
-      class="form__input"
+      class="form__input js-github"
       required
     />
   </div>
