changes footer&index css

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -2,7 +2,7 @@
 
     <div class="footer__container">
         <section class="footer__copy">
-            Awesome profile-cards &copy; 2021
+            Undefined &copy; 2021
         </section>
     </div>
     <section class="footer__logo">
