--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -10,34 +10,34 @@
 /*IMAGEN*/
 .tarjeta {
   width: 250px;
-  /*height: 63px;*/
+
   padding-bottom: 30px;
   @include tablet {
     width: 419px;
-    height: 105px;
   }
 }
 /*TITULOS*/
 .main {
   &__title {
     font-family: $font-index-title;
-    font-size: 20px;
+    font-size: 22px;
     color: $text-index-title;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     font-weight: 900;
     @include tablet {
-      font-size: 24px;
-      margin-bottom: 10px;
+      margin-top: 10px;
+      font-size: 30px;
     }
   }
   &__subtitle {
     font-family: $font-index-subtitle;
-    font-size: 13px;
+    font-size: 14px;
     color: $text-index-subtitle;
     padding: 0 28px 0 28px;
-    align-self: center;
+    text-align: center;
     margin-bottom: 17px;
     @include tablet {
+      margin-top: 5px;
       font-size: 16px;
     }
   }
@@ -82,28 +82,32 @@
   &__content-design {
     color: black;
     font-family: $font-index-subtitle;
-    font-size: 13px;
+    font-size: 14px;
     align-self: center;
+
     @include tablet {
       font-size: 16px;
+      margin-top: 5px;
     }
   }
   &__content-fild {
     color: black;
     font-family: $font-index-subtitle;
-    font-size: 13px;
+    font-size: 14px;
     align-self: center;
     @include tablet {
       font-size: 16px;
+      margin-top: 5px;
     }
   }
   &__content1-share {
     color: black;
     font-family: $font-index-subtitle;
-    font-size: 13px;
+    font-size: 14px;
     align-self: center;
     @include tablet {
       font-size: 16px;
+      margin-top: 5px;
     }
   }
 }
@@ -126,7 +130,7 @@
   height: 26px;
   font-size: 22.4px;
   text-align: center;
-  padding-left: 5px;
+  padding-left: 10px;
   @include tablet {
     font-size: 28px;
     padding-left: 10px;
@@ -139,7 +143,7 @@
   height: 26px;
   font-size: 22.4px;
   text-align: center;
-  padding-left: 5px;
+  padding-left: 15px;
   @include tablet {
     font-size: 28px;
     padding-left: 20px;
@@ -163,7 +167,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  @include tablet {
-    margin-top: 150px;
-  }
+  
 }
