add border left to name&role

--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="section__cards">
   <div class="card__preview">
     <button class="preview__reset" type="reset">
       <p class="preview__reset--text">Reset</p>
