--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -1,9 +1,11 @@
-.container {
+.section__cards {
   width: 100%;
   height: 457px;
   background: linear-gradient(to bottom, #bfcdd0, #dde9ed);
 }
 .card__preview {
+  padding-top: 38px;
+  padding-left: 45px;
   .preview__reset {
     display: flex;
     flex-direction: row;
@@ -15,8 +17,6 @@
     border: solid 1px white;
     border-radius: 15px;
     background-color: transparent;
-    margin: 38px auto 0 45px;
-
     &--icon {
       order: -1;
       color: #54585a;
@@ -28,18 +28,19 @@
 .card__preview--default {
   width: 240px;
   height: 329px;
-  margin: 20px 35px 40px 45px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  padding-top: 20px;
   background-color: #fff;
   box-shadow: 0 1px 10px 0 var(--black-20), 0 1px 3px 0 rgba(0, 0, 0, 0.35);
   .preview__text {
     font-family: $font-card-title;
-    outline: 1px solid red;
     border-left: solid 5px #438792;
+
     &--name {
       margin-left: 20px;
       font-weight: 700;
       color: $text-index-subtitle;
-      padding-top: 21px;
       padding-bottom: 4px;
     }
     &--role {
