update form styles

--- a/src/html/partials/partials__cards/form__design.html
+++ b/src/html/partials/partials__cards/form__design.html
@@ -1,12 +1,11 @@
 <fieldset class="form__design">
-  <legend class="form__title form__title--design js-design__title">
+  <legend class="form__title js-design__title">
     <ul>
       <i class="form__title--icon icon-light far fa-object-ungroup"></i>
     </ul>
-    Diseña
+    <h2 class="form__title--text">Diseña</h2>
     <ul>
-      <i class="form__title--icon icon-medium far fa-chevron-down"></i>
-      <i class="form__title--icon icon-medium far fa-chevron-up"></i>
+      <i class="form__title--chevron icon-medium far fa-chevron-down"></i>
     </ul>
   </legend>
   <div class="form__design--wrapper">
