--- a/src/html/partials/partials__cards/design/palette.html
+++ b/src/html/partials/partials__cards/design/palette.html
@@ -1,11 +1,14 @@
-<div class="form__input--color--wrapper">
-    <input class="form__input" type="radio" name="chooseColor" id="chooseColor" value="color@@num"> 
-    <div class="form__input--color--palette">
-        <div class="form__input--color colorA@@num"></div>
-        <div class="form__input--color colorB@@num"></div>
-        <div class="form__input--color colorC@@num"></div>
-    </div>
+<div class="form__radio--color--wrapper">
+  <input
+    class="form__radio"
+    type="radio"
+    name="chooseColor"
+    id="chooseColor"
+    value="color@@num"
+  />
+  <div class="form__radio--color--palette">
+    <div class="form__radio--color colorA@@num"></div>
+    <div class="form__radio--color colorB@@num"></div>
+    <div class="form__radio--color colorC@@num"></div>
+  </div>
 </div>
-
-
-
