--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -19,8 +19,13 @@
     background-color: transparent;
     &--icon {
       order: -1;
-      color: #54585a;
+      color: $text-icon;
       font-size: 12px;
+    }
+    &--text {
+      font-size: 12px;
+      color: $text-icon;
+      text-transform: uppercase;
     }
   }
 }
