--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -3,7 +3,8 @@
   font-family: $font-index-subtitle;
   font-size: 14px;
   padding-top: 20px;
-  border-top: 1px solid #b8b8b9;
+  border-top: 1px solid $background-footer;
+  ;
   display: flex;
   flex-direction: column;
   align-items: center;
