--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -4,10 +4,12 @@
   font-size: 14px;
   padding-top: 20px;
   border-top: 1px solid $background-footer;
-  ;
+  position: fixed;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   height: 110px;
 
   @include tablet {
