--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -6,6 +6,8 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  position:relative;
+  bottom: 30px;
 }
 /*IMAGEN*/
 .tarjeta {
@@ -18,6 +20,7 @@
 }
 /*TITULOS*/
 .main {
+
   &__title {
     font-family: $font-index-title;
     font-size: 22px;
@@ -33,12 +36,13 @@
     font-family: $font-index-subtitle;
     font-size: 14px;
     color: $text-index-subtitle;
-    padding: 0 28px 0 28px;
     text-align: center;
-    margin-bottom: 17px;
+    margin-bottom: 18px;
+    max-width: 268px;
     @include tablet {
       margin-top: 5px;
       font-size: 16px;
+      max-width: 331px;
     }
   }
 }
@@ -48,10 +52,10 @@
   height: 73.8px;
   display: flex;
   justify-content: center;
-  border: solid $text-index-title 1.6px;
+  border: solid rgba(225, 115, 52, 0.2) 1.6px;
   border-radius: 4px;
-  margin: 17.8px 0 0.2px;
   padding: 15px 5px 5px 5px;
+  margin-bottom: 38px;
   @include tablet {
     width: 325px;
     height: 86px;
@@ -161,7 +165,6 @@
   text-transform: uppercase;
   width: 160px;
   height: 42px;
-  margin: 90px 75px 0 65px;
   border-radius: 21px;
   background-color: $background-button;
   display: flex;
