--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,18 +1,24 @@
+.index {
+  &--wrapper {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 1fr 110px;
+  }
+}
+
 .container1 {
   background-color: $background-index;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  position:relative;
-  bottom: 30px;
 }
 /*IMAGEN*/
 .tarjeta {
   width: 250px;
-
   padding-bottom: 30px;
   @include tablet {
     width: 419px;
@@ -20,7 +26,6 @@
 }
 /*TITULOS*/
 .main {
-
   &__title {
     font-family: $font-index-title;
     font-size: 22px;
