--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,25 +1,19 @@
 .header {
   background-color: $background-header;
   width: 100vw;
-  height: 70px;
+  height: 110px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 40px;
+
+  @include tablet {
+    justify-content: left;
+  }
 }
 
 .image_header {
-  width: 100vw;
+  width: 200px;
   height: 50px;
-  margin: 30px 0 20px 0;
-  display: flex;
-  justify-content: center;
 
-  @include tablet {
-    width: 100vw;
-    height: 60px;
-    transform: translate(-30%);
-    margin: 15px 0 15px 0;
-  }
-  @include desktop {
-    width: 100vw;
-    height: 60px;
-    transform: translate(-40%);
-  }
 }
