--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -1,43 +1,45 @@
-<section class="section__cards">
-  <div class="card__preview">
-    <button class="preview__reset" type="reset">
-      <p class="preview__reset--text">Reset</p>
-      <i class="far fa-trash-alt preview__reset--icon"></i>
-    </button>
-
-    <div class="card__preview--default">
-      <div class="preview__text">
-        <h3 class="preview__text--name js-preview-name">Nombre Apellido</h3>
-        <h4 class="preview__text--role js-preview-job">Front-End Developer</h4>
-      </div>
-      <div class="preview__image"></div>
-      <div class="preview__links">
-        <a
-          href="#"
-          class="preview__links--social js-preview-phone"
-          title="Phone"
-          ><i class="fas fa-mobile-alt preview__links--icon"></i>
-        </a>
-        <a
-          href="#"
-          class="preview__links--social js-preview-email"
-          title="Email"
-          ><i class="far fa-envelope preview__links--icon"></i>
-        </a>
-        <a
-          href="#"
-          class="preview__links--social js-preview-linkedin"
-          title="Linkedin"
-          ><i class="fab fa-linkedin-in preview__links--icon"></i>
-        </a>
-        <a
-          href="#"
-          class="preview__links--social js-preview-github"
-          title="GitHub"
-          ><i class="fab fa-github-alt preview__links--icon"></i>
-        </a>
+<section class="card__wrapper">
+  <section class="section__cards">
+    <div class="card__preview">
+      <button class="preview__reset" type="reset">
+        <p class="preview__reset--text">Reset</p>
+        <i class="far fa-trash-alt preview__reset--icon"></i>
+      </button>
+  
+      <div class="card__preview--default">
+        <div class="preview__text">
+          <h3 class="preview__text--name js-preview-name">Nombre Apellido</h3>
+          <h4 class="preview__text--role js-preview-job">Front-End Developer</h4>
+        </div>
+        <div class="preview__image"></div>
+        <div class="preview__links">
+          <a
+            href="#"
+            class="preview__links--social js-preview-phone"
+            title="Phone"
+            ><i class="fas fa-mobile-alt preview__links--icon"></i>
+          </a>
+          <a
+            href="#"
+            class="preview__links--social js-preview-email"
+            title="Email"
+            ><i class="far fa-envelope preview__links--icon"></i>
+          </a>
+          <a
+            href="#"
+            class="preview__links--social js-preview-linkedin"
+            title="Linkedin"
+            ><i class="fab fa-linkedin-in preview__links--icon"></i>
+          </a>
+          <a
+            href="#"
+            class="preview__links--social js-preview-github"
+            title="GitHub"
+            ><i class="fab fa-github-alt preview__links--icon"></i>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+  <include src="./form.html"></include>
 </section>
-<include src="./form.html"></include>
