--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -1,11 +1,19 @@
 .section__cards {
   width: 100%;
-  height: 457px;
   background: linear-gradient(to bottom, #bfcdd0, #dde9ed);
+  padding: 38px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include tablet {
+    border-radius: 6px;
+  }
+  @include desktop {
+    flex: 1;
+  }
 }
 .card__preview {
-  padding-top: 38px;
-  padding-left: 45px;
+
   .preview__reset {
     display: flex;
     flex-direction: row;
@@ -34,7 +42,6 @@
   width: 240px;
   height: 329px;
   margin-top: 20px;
-  margin-bottom: 40px;
   padding-top: 20px;
   background-color: #fff;
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.35);
@@ -79,6 +86,25 @@
     &--icon {
       color: $text-index-subtitle;
       font-size: 18px;
+    }
+  }
+}
+
+//Responsive
+.card {
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(
+      to bottom,
+      $background-index,
+      $background-header 9%
+    );
+    @include tablet {
+      flex-direction: row-reverse;
+      justify-content: space-evenly;
+      padding: 20px 40px;
+      align-self: stretch;
     }
   }
 }
