--- a/src/html/partials/partials__cards/form__fill.html
+++ b/src/html/partials/partials__cards/form__fill.html
@@ -8,8 +8,8 @@
     <label for="fullname" class="form__label">Nombre Completo</label>
     <input 
       type="text"
-      id="fullname"
-      name="fullname"
+      id="name"
+      name="name"
       placeholder="Ej:Sally Jill"
       pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
       class="form__input js-name js-input"
